whitespace bugfix

--- a/assets/styles/partials/catalog.sass
+++ b/assets/styles/partials/catalog.sass
@@ -101,6 +101,7 @@
       display: flex
       align-items: center
       justify-content: flex-start
+      gap: 50px
       @media screen and (max-width: 1279px)
         flex-direction: column
     &-block
@@ -109,11 +110,8 @@
         max-width: unset
         margin: 0 auto
     &-img
-      min-width: 500px
+      width: 33%
       max-height: 300px
-      margin-right: 50px
-      @media screen and (min-width: 1280px) and (max-width: 1919px)
-        min-width: 33%
       @media screen and (max-width: 1279px)
         width: 80%
         margin: 0 auto 30px
@@ -123,7 +121,9 @@
       gap: 50px
       justify-content: flex-start
       align-items: flex-start
+      width: 67%
       @media screen and (max-width: 1279px)
+        width: 100%
         gap: 32px
         flex-direction: column
     &-subtitle
@@ -131,9 +131,12 @@
       padding-bottom: 1em
       @media screen and (min-width: 1280px) and (max-width: 1919px)
         font-size: 18px
+      @media screen and (max-width: 1279px)
+        text-align: center
     &-text
       font: normal normal bold 28px/1.15 Manrope
       color: $colorDark
+      white-space: nowrap
       @media screen and (min-width: 1280px) and (max-width: 1919px)
         font-size: 22px
 .catalog-detailed
