--- a/assets/styles/partials/footer.sass
+++ b/assets/styles/partials/footer.sass
@@ -72,6 +72,8 @@
         color: #000
     &-policy
       max-width: 500px
+      @media screen and (min-width: 1280px) and (max-width: 1919px)
+        max-width: 300px
       @media screen and (max-width: 766px)
         max-width: unset
   &__box
